--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "helloserver",
+  "name": "hello",
   "version": "1.0.0",
+  "description": "my first web",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "express": "^4.21.2"
   }
 }
